# MindMap

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Connection.h  MindMapNode.h  MindMapScene.h  mainwindow.h
src/: Connection.cpp  MindMapNode.cpp  MindMapScene.cpp  mainwindow.cpp
